<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item android:title="@string/categories">
            <menu>
                <item
                    android:id="@+id/topHeadlinesFragment"
                    android:title="@string/top_headlines" />
                <item
                    android:id="@+id/businessFragment"
                    android:title="@string/business" />
                <item
                    android:id="@+id/entertainmentFragment"
                    android:title="@string/entertainment" />
                <item
                    android:id="@+id/healthFragment"
                    android:title="@string/health" />
                <item
                    android:id="@+id/scienceFragment"
                    android:title="@string/science" />
                <item
                    android:id="@+id/sportsFragment"
                    android:title="@string/sports" />
                <item
                    android:id="@+id/techFragment"
                    android:title="@string/technology" />
            </menu>
        </item>
    </group>

</menu>