<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/news_item"
        android:layout_width="match_parent"
        android:layout_height="132sp"
        android:layout_margin="8sp"
        app:cardCornerRadius="8sp"
        app:cardMaxElevation="8sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/news_img"
                android:layout_width="144sp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12sp"
                android:layout_marginLeft="12sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/news_title"
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:fontFamily="@font/abhaya_libre_bold"
                    android:text="@string/NewsTitle"
                    android:textColor="#383838 "
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2sp"
                    android:fontFamily="@font/open_sans"

                    android:text="@string/PublishTime"
                    android:textColor="#383838 "
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/publish_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2sp"
                    android:layout_marginBottom="2sp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/PublishTimeValue"
                    android:textColor="#383838 "
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/news_link"
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_marginStart="-50sp"
            android:layout_marginLeft="-50sp"
            android:text="" />

    </androidx.cardview.widget.CardView>
</layout>