<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="horizontal">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart"
                android:layout_width="220dp"
                android:layout_height="220dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="center"
                        android:text="@string/covid_19_stats"
                        android:textColor="#fff"
                        android:textSize="14sp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/total_confirmed_cases"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tc_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/total_recovered"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tr_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/total_deaths"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/td_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="4sp"
            tools:listitem="@layout/item_view" />

    </LinearLayout>
</layout>